[gd_scene load_steps=3 format=3 uid="uid://c44acnuqpgvf1"]

[ext_resource type="Script" path="res://script/level_complete_ui.gd" id="1_script"]
[ext_resource type="Texture2D" uid="uid://cvdh0ubg4sqq0" path="res://assets/BarBackgorund.png" id="2_bg"]

[node name="LevelCompleteUI" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_script")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 20.0
offset_right = 100.0
offset_bottom = 60.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 32
text = "LEVEL COMPLETE!"
horizontal_alignment = 1

[node name="SummaryLabel" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -40.0
offset_right = 150.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
text = "Summary..."
horizontal_alignment = 1

[node name="NextButton" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -80.0
offset_top = -80.0
offset_right = 80.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 0
text = "Continue"

[node name="MenuButton" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -80.0
offset_top = -30.0
offset_right = 80.0
offset_bottom = 0.0
grow_horizontal = 2
grow_vertical = 0
text = "Main Menu"

[connection signal="pressed" from="Panel/NextButton" to="." method="_on_next_button_pressed"]
[connection signal="pressed" from="Panel/MenuButton" to="." method="_on_menu_button_pressed"]
